src/test/resources/validation/error/implicitJoinViaNonExistentPath/schema.graphqls
type Query {
  student(id: ID!): StudentVedInstitusjon
}

type StudentVedInstitusjon @table(name: "STUDENT") {
  id: ID!
  #there is no path from STUDENT to EMNE, via EKSAMENSTILPASNING
  emner: [Emne!]! @splitQuery @reference(via: [ReferenceElement {table: "EKSAMENSTILPASNING"}])
}

type Eksamenstilpasningssoknad @table(name: "EKSAMENSTILPASNING") {
  id: ID!
}

type Emne @table {
  id: ID!
}

